# ResumeMatcher

./: ResumeMatchEDU_Architecture.md
resumematch/: .dockerignore  .gitignore  README.md  resumematcher_analytics_csv_only.ipynb
resumematch/apps/backend/: README.md  manage.py  pyproject.toml  requirements.txt  ruff.toml
resumematch/apps/backend/project/: asgi.py  settings.py  urls.py
resumematch/apps/backend/src/: __init__.py
resumematch/apps/backend/src/application/: __init__.py  label_usecase.py  match_usecase.py
resumematch/apps/backend/src/core/: __init__.py  entities.py  ports.py
resumematch/apps/backend/src/di/: __init__.py  container.py
resumematch/apps/backend/src/infrastructure/: __init__.py  repos.py
resumematch/apps/backend/src/infrastructure/gridfs/: storage.py
resumematch/apps/backend/src/infrastructure/ml/: tfidf_matcher.py
resumematch/apps/backend/src/infrastructure/orm/: models.py
resumematch/apps/backend/src/interface/: __init__.py
resumematch/apps/backend/src/interface/graphql/: __init__.py  schema.py
resumematch/apps/backend/src/interface/rest/: __init__.py  views.py
resumematch/apps/backend/tests/: test_core_entities.py  test_label_usecase.py
resumematch/apps/frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
resumematch/data/: candidates_test.csv  candidates_train.csv  labels_test.csv  labels_train.csv  vacancies_test.csv  vacancies_train.csv
resumematch/deploy/: .env.example  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml
(+31 files in other folders)
